--- a/freeconf.conf
+++ b/freeconf.conf
@@ -1,21 +1,26 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <freeconf-configuration>
     <general>
+        <lang>cs</lang>
         <lang>en</lang>
     </general>
-    <packages>
     <package>
         <name>Freeconf</name>
         <location>packages/freeconf</location>
+        <output>packages/freeconf/freeconf.xml</output>
+        <native>freeconf.conf</native>
     </package>
     <package>
         <name>Apache</name>
         <location>packages/apache</location>
+        <output>b</output>
+        <native>a</native>
     </package>
     <package>
         <name>Test</name>
         <location>packages/test</location>
+        <output>a</output>
+        <native>b</native>
     </package>
-    </packages>
 
 </freeconf-configuration>
