--- a/freeconf.conf
+++ b/freeconf.conf
@@ -9,18 +9,21 @@
         <location>packages/freeconf</location>
         <output>packages/freeconf/freeconf.xml</output>
         <native>freeconf.conf</native>
+        <xslt></xslt>
     </package>
     <package>
         <name>Apache</name>
         <location>packages/apache</location>
         <output>b</output>
         <native>a</native>
+        <xslt>packages/apache/apache_default_transform.xsl</xslt>
     </package>
     <package>
         <name>Test</name>
         <location>packages/test</location>
         <output>a</output>
         <native>b</native>
+        <xslt></xslt>
     </package>
 
 </freeconf-configuration>
