--- a/freeconf.conf
+++ b/freeconf.conf
@@ -16,7 +16,7 @@
         <location>packages/apache</location>
         <output>b</output>
         <native>a</native>
-        <xslt>packages/apache/apache_default_transform.xsl</xslt>
+        <xslt>packages/apache/apache_default_transform.xml</xslt>
     </package>
     <package>
         <name>Test</name>
