--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,31 @@ src/Model/entries/__pycache__/
 src/Model/exception_logging/__pycache__/
 src/View/Flask/__pycache__/
 src/View/__pycache__/
+.directory
+.gitignore
+a
+b
+drawing-1.svg
+ico.png
+output.xml
+packages/apache/apache_conf_a.xml
+src/IO/XMLParser/
+src/Model/Config/__pycache__/
+src/Model/Package/__pycache__/__init__.cpython-35.pyc
+src/Model/Package/__pycache__/group.cpython-35.pyc
+src/Model/Package/__pycache__/lists.cpython-35.pyc
+src/Model/Package/__pycache__/package.cpython-35.pyc
+src/Model/Package/entries/GUI/__pycache__/gtab.cpython-35.pyc
+src/Model/Package/entries/__pycache__/base_entry.cpython-35.pyc
+src/Model/Package/entries/__pycache__/bool.cpython-35.pyc
+src/Model/Package/entries/__pycache__/container.cpython-35.pyc
+src/Model/Package/entries/__pycache__/fuzzy.cpython-35.pyc
+src/Model/Package/entries/__pycache__/key_word.cpython-35.pyc
+src/Model/Package/entries/__pycache__/number.cpython-35.pyc
+src/Model/Package/entries/__pycache__/string.cpython-35.pyc
+src/Model/Package/entries/multiple/__pycache__/
+src/Model/Package/exception_logging/__pycache__/exception.cpython-35.pyc
+src/Presenter/__pycache__/config_presenter.cpython-35.pyc
+src/Presenter/__pycache__/package_presenter.cpython-35.pyc
+src/View/Flask/static/img/
+src/__pycache__/
