native output import pluginu

--- a/packages/apache/apache2.conf
+++ b/packages/apache/apache2.conf
@@ -1,64 +1,123 @@
+ServerTokens OS
+
+
+HostnameLookups no
+
+
+Address localhost
+
+
+Port 80.0
+
+
+AccessFileName .htaccess
+
+
+LogLevel Critical
+
+
+MaxKeepAliveRequests 98.0
+
+
+KeepAliveTimeout 5.0
+
+
+ErrorLog /var/log/apache2/error.log
+
+
+DefaultType text/plain
+
+
+TargetPath /tmp
+
+
+URLPath temp
+
+
+Address localhost
+
+
+Port 80
+
+
+DocumentRoot /var/www
+
+
+ServerAdmin admin
+
+
+Allow from all
+
+
+Indexes no
+
+
+AuthConfig no
+
+
+Limit no
+
+
+Options no
+
+
+FileInfo no
+
+
+Order Allow,Deny
+
+
+Deny from 1.2.3.4
+
+
+Includes no
+
+
+IncludesNOEXEC no
+
+
+SymLinksIfOwnerMatch no
+
+
+MultiViews yes
+
+
+ExecCGI no
+
+
+Path /var/www
+
+
+Hostname www.pokus.net
+
+
+ServerName pokus.net
+
+
+TraceEnable Off
+
+
 ServerRoot /etc/apache2
 
 
 PidFile /var/run/apache2.pid
 
 
-TimeOut 300
-
-
-KeepAlive On
-
-
-MaxKeepAliveRequests 98
-
-
-KeepAliveTimeout 5
-
-
-AccessFileName .htaccess
+KeepAlive yes
 
 
 User www-data
 
 
+LockFile /var/lock/apache2/accept.lock
+
+
 Group www-data
 
 
-DefaultType text/plain
+ServerSignature On
 
 
-HostnameLookups Off
+TimeOut 300.0
 
 
-LogLevel Critical
-
-
-NameVirtualHost localhost
-<VirtualHost localhost:80>
-ServerName pokus.net
-
-
-ServerAlias pokus.cz
-ServerAlias www.pokus.net
-ServerAdmin admin
-
-
-DocumentRoot /var/www
-
-
-Alias temp /tmp
-<Directory "/var/www">
-Options -ExecCGI -Includes -IncludesNOEXEC +MultiViews -SymLinksIfOwnerMatch
-AllowOverride None
-Order Allow,Deny
-
-
-Allow from all
-
-
-Deny from 1.2.3.4
-
-
-</Directory>
-</VirtualHost>
