--- a/packages/apache/apache2.conf
+++ b/packages/apache/apache2.conf
@@ -1,91 +1,61 @@
-HostnameLookups no
-
-
 TimeOut 300.0
 
 
-ServerSignature On
-
-
-ServerTokens OS
-
-
-User www-data
-
-
-ErrorLog /var/log/apache2/error.log
-
-
-KeepAliveTimeout 5.0
-
-
-LogLevel Critical
-
-
-KeepAlive yes
-
-
-LockFile /var/lock/apache2/accept.lock
-
-
-Group www-data
-
-
-ServerRoot /etc/apache2
+DefaultType text/plain
 
 
 AccessFileName .htaccess
 
 
-Port 80.0
+MaxKeepAliveRequests 98.0
+
+
+LockFile /var/lock/apache2/accept.lock
+
+
+ServerRoot /etc/apache2
+
+
+KeepAliveTimeout 5.0
+
+
+PidFile /var/run/apache2.pid
+
+
+ServerTokens OS
 
 
 Address localhost
 
 
+Port 80.0
+
+
+HostnameLookups no
+
+
+ServerSignature On
+
+
+Group www-data
+
+
 TraceEnable Off
 
 
-Limit no
+LogLevel Critical
 
 
-AuthConfig no
+ErrorLog /var/log/apache2/error.log
 
 
-Options no
+TargetPath /tmp
 
 
-FileInfo no
+URLPath temp
 
 
-Indexes no
-
-
-ExecCGI no
-
-
-SymLinksIfOwnerMatch no
-
-
-Includes no
-
-
-IncludesNOEXEC no
-
-
-MultiViews yes
-
-
-Deny from 1.2.3.4
-
-
-Path /var/www
-
-
-Order Allow,Deny
-
-
-Allow from all
+ServerName pokus.net
 
 
 Hostname www.pokus.net
@@ -94,7 +64,46 @@ Hostname www.pokus.net
 Port 80
 
 
-DocumentRoot /var/www
+Includes no
+
+
+ExecCGI no
+
+
+IncludesNOEXEC no
+
+
+SymLinksIfOwnerMatch no
+
+
+MultiViews yes
+
+
+Order Allow,Deny
+
+
+Path /var/www
+
+
+Allow from all
+
+
+Options no
+
+
+AuthConfig no
+
+
+Limit no
+
+
+Indexes no
+
+
+FileInfo no
+
+
+Deny from 1.2.3.4
 
 
 Address localhost
@@ -103,21 +112,15 @@ Address localhost
 ServerAdmin admin
 
 
-URLPath temp
+DocumentRoot /var/www
 
 
-TargetPath /tmp
+TargetPath a
 
 
-ServerName pokus.net
+User www-data
 
 
-PidFile /var/run/apache2.pid
-
-
-DefaultType text/plain
-
-
-MaxKeepAliveRequests 98.0
+KeepAlive yes
 
 
