nová podoba balíčku

--- a/packages/apache/apache2.conf
+++ b/packages/apache/apache2.conf
@@ -1,61 +1,64 @@
-TimeOut 300.0
-
-
-DefaultType text/plain
-
-
-AccessFileName .htaccess
-
-
 MaxKeepAliveRequests 98.0
 
 
 LockFile /var/lock/apache2/accept.lock
 
 
-ServerRoot /etc/apache2
-
-
-KeepAliveTimeout 5.0
-
-
-PidFile /var/run/apache2.pid
-
-
-ServerTokens OS
-
-
-Address localhost
-
-
-Port 80.0
-
-
-HostnameLookups no
-
-
-ServerSignature On
-
-
-Group www-data
-
-
-TraceEnable Off
-
-
-LogLevel Critical
-
-
-ErrorLog /var/log/apache2/error.log
-
-
-TargetPath /tmp
+User www-data
 
 
 URLPath temp
 
 
-ServerName pokus.net
+TargetPath /tmp
+
+
+Address localhost
+
+
+Allow from all
+
+
+ExecCGI no
+
+
+Includes no
+
+
+IncludesNOEXEC no
+
+
+MultiViews yes
+
+
+SymLinksIfOwnerMatch no
+
+
+AuthConfig no
+
+
+Options no
+
+
+FileInfo no
+
+
+Indexes no
+
+
+Limit no
+
+
+Path /var/www
+
+
+Deny from 1.2.3.4
+
+
+Order Allow,Deny
+
+
+DocumentRoot /var/www
 
 
 Hostname www.pokus.net
@@ -64,63 +67,60 @@ Hostname www.pokus.net
 Port 80
 
 
-Includes no
-
-
-ExecCGI no
-
-
-IncludesNOEXEC no
-
-
-SymLinksIfOwnerMatch no
-
-
-MultiViews yes
-
-
-Order Allow,Deny
-
-
-Path /var/www
-
-
-Allow from all
-
-
-Options no
-
-
-AuthConfig no
-
-
-Limit no
-
-
-Indexes no
-
-
-FileInfo no
-
-
-Deny from 1.2.3.4
-
-
-Address localhost
+ServerName pokus.net
 
 
 ServerAdmin admin
 
 
-DocumentRoot /var/www
-
-
 TargetPath a
 
 
-User www-data
+ErrorLog /var/log/apache2/error.log
+
+
+ServerSignature On
+
+
+KeepAliveTimeout 5.0
 
 
 KeepAlive yes
+
+
+ServerTokens OS
+
+
+ServerRoot /etc/apache2
+
+
+HostnameLookups no
+
+
+DefaultType text/plain
+
+
+TraceEnable Off
+
+
+LogLevel Critical
+
+
+Address localhost
+
+
+Port 80.0
+
+
+PidFile /var/run/apache2.pid
+
+
+AccessFileName .htacc
+
+
+Group www-data
+
+
+TimeOut 300.0
 
 
