--- a/packages/apache/apache2.conf
+++ b/packages/apache/apache2.conf
@@ -1,94 +1,40 @@
-MaxKeepAliveRequests 98.0
+PidFile /var/run/apache2.pid
+
+
+LogLevel Critical
 
 
 LockFile /var/lock/apache2/accept.lock
 
 
+DefaultType text/plain
+
+
+ServerTokens OS
+
+
 User www-data
-
-
-URLPath temp
-
-
-TargetPath /tmp
-
-
-Address localhost
-
-
-Allow from all
-
-
-ExecCGI no
-
-
-Includes no
-
-
-IncludesNOEXEC no
-
-
-MultiViews yes
-
-
-SymLinksIfOwnerMatch no
-
-
-AuthConfig no
-
-
-Options no
-
-
-FileInfo no
-
-
-Indexes no
-
-
-Limit no
-
-
-Path /var/www
-
-
-Deny from 1.2.3.4
-
-
-Order Allow,Deny
-
-
-DocumentRoot /var/www
-
-
-Hostname www.pokus.net
-
-
-Port 80
-
-
-ServerName pokus.net
-
-
-ServerAdmin admin
-
-
-TargetPath a
-
-
-ErrorLog /var/log/apache2/error.log
 
 
 ServerSignature On
 
 
+Group www-data
+
+
 KeepAliveTimeout 5.0
+
+
+TraceEnable Off
+
+
+# Gello  AccessFileName .htaccess
 
 
 KeepAlive yes
 
 
-ServerTokens OS
+# Gello  TimeOut 300.0
 
 
 ServerRoot /etc/apache2
@@ -97,30 +43,9 @@ ServerRoot /etc/apache2
 HostnameLookups no
 
 
-DefaultType text/plain
+ErrorLog /var/log/apache2/error.log
 
 
-TraceEnable Off
-
-
-LogLevel Critical
-
-
-Address localhost
-
-
-Port 80.0
-
-
-PidFile /var/run/apache2.pid
-
-
-AccessFileName .htacc
-
-
-Group www-data
-
-
-TimeOut 300.0
+MaxKeepAliveRequests 98.0
 
 
