--- a/packages/apache/apache2.conf
+++ b/packages/apache/apache2.conf
@@ -1,51 +1,80 @@
-PidFile /var/run/apache2.pid
-
-
-LogLevel Critical
-
-
-LockFile /var/lock/apache2/accept.lock
-
-
-DefaultType text/plain
-
-
-ServerTokens OS
-
-
-User www-data
-
-
-ServerSignature On
-
-
-Group www-data
-
-
-KeepAliveTimeout 5.0
-
-
-TraceEnable Off
-
-
-# Gello  AccessFileName .htaccess
-
-
-KeepAlive yes
-
-
-# Gello  TimeOut 300.0
-
-
-ServerRoot /etc/apache2
-
-
+# Container apache-config
+NameVirtualHost localhost:80.000000
 HostnameLookups no
 
 
 ErrorLog /var/log/apache2/error.log
 
 
-MaxKeepAliveRequests 98.0
+TimeOut 300.000000
 
 
+ServerRoot a
+
+
+LogLevel Critical
+
+
+Group www-data
+
+
+LockFile /var/lock/apache2/accept.lock
+
+
+AccessFileName .htaccess
+
+
+ServerTokens OS
+
+
+<VirtualHost localhost:80>
+ServerAdmin admin
+
+
+DocumentRoot /var/www
+
+
+<Directory "/var/www">
+Allow from all
+
+
+Options -Includes +FollowSymlinks -IncludesNOEXEC +MultiViews +Indexes -ExecCGI -SymLinksIfOwnerMatch
+Order Allow,Deny
+
+
+AllowOverride None
+Deny from 1.2.3.4
+
+
+</Directory>
+ServerAlias www.pokus.net
+Alias temp /tmp
+ServerName pokus.net
+
+
+</VirtualHost>
+User www-data
+
+
+KeepAliveTimeout 5.000000
+
+
+PidFile /var/run/apache2.pid
+
+
+DefaultType text/plain
+
+
+MaxKeepAliveRequests 98.000000
+
+
+ServerSignature On
+
+
+KeepAlive yes
+
+
+TraceEnable Off
+
+
+# End of apache-config
