--- a/packages/apache/apache2.conf
+++ b/packages/apache/apache2.conf
@@ -1,80 +1,51 @@
-# Container apache-config
-NameVirtualHost localhost:80.000000
-HostnameLookups no
-
-
-ErrorLog /var/log/apache2/error.log
-
-
-TimeOut 300.000000
-
-
-ServerRoot a
-
-
-LogLevel Critical
+KeepAlive yes
 
 
 Group www-data
 
 
-LockFile /var/lock/apache2/accept.lock
+# Gello  LogLevel Critical
 
 
-AccessFileName .htaccess
+ErrorLog /var/log/apache2/error.log
 
 
-ServerTokens OS
-
-
-<VirtualHost localhost:80>
-ServerAdmin admin
-
-
-DocumentRoot /var/www
-
-
-<Directory "/var/www">
-Allow from all
-
-
-Options -Includes +FollowSymlinks -IncludesNOEXEC +MultiViews +Indexes -ExecCGI -SymLinksIfOwnerMatch
-Order Allow,Deny
-
-
-AllowOverride None
-Deny from 1.2.3.4
-
-
-</Directory>
-ServerAlias www.pokus.net
-Alias temp /tmp
-ServerName pokus.net
-
-
-</VirtualHost>
-User www-data
-
-
-KeepAliveTimeout 5.000000
-
-
-PidFile /var/run/apache2.pid
-
-
-DefaultType text/plain
-
-
-MaxKeepAliveRequests 98.000000
-
-
-ServerSignature On
-
-
-KeepAlive yes
+HostnameLookups no
 
 
 TraceEnable Off
 
 
-# End of apache-config
+User www-data
+
+
+# Gello  DefaultType text/plain
+
+
+ServerSignature On
+
+
+ServerTokens OS
+
+
+MaxKeepAliveRequests 98.000000
+
+
+TimeOut 300.000000
+
+
+KeepAliveTimeout 5.000000
+
+
+LockFile /var/lock/apache2/accept.lock
+
+
+PidFile /var/run/apache2.pid
+
+
+AccessFileName .htaccess
+
+
+ServerRoot a
+
+
