--- a/packages/apache/apache2.conf
+++ b/packages/apache/apache2.conf
@@ -1,51 +1,108 @@
-KeepAlive yes
+SSLInsecureRenegotiation yes
+
+
+SSLRequireSSL yes
+
+
+SSLCARevocationFile c
 
 
 Group www-data
 
 
-# Gello  LogLevel Critical
+AccessFileName .htaccess
 
 
-ErrorLog /var/log/apache2/error.log
-
-
-HostnameLookups no
-
-
-TraceEnable Off
+SSLCertificateFile f
 
 
 User www-data
 
 
-# Gello  DefaultType text/plain
+SSLCertificateChainFile e
 
 
-ServerSignature On
+DefaultType text/plain
 
 
-ServerTokens OS
-
-
-MaxKeepAliveRequests 98.000000
-
-
-TimeOut 300.000000
-
-
-KeepAliveTimeout 5.000000
+ErrorLog /var/log/apache2/error.log
 
 
 LockFile /var/lock/apache2/accept.lock
 
 
-PidFile /var/run/apache2.pid
+SSLMutex i
 
 
-AccessFileName .htaccess
+ServerSignature On
+
+
+<VirtualHost localhost:80>
+DocumentRoot /var/www
+
+
+ServerName pokus.net
+
+
+<Directory "/var/www">
+AllowOverride None
+Options -IncludesNOEXEC -Includes +Indexes -ExecCGI +FollowSymlinks +MultiViews -SymLinksIfOwnerMatch
+Deny from 1.2.3.4
+
+
+Order Allow,Deny
+
+
+Allow from all
+
+
+</Directory>
+ServerAlias www.pokus.net
+ServerAdmin admin
+
+
+Alias temp /tmp
+</VirtualHost>
+LogLevel Critical
 
 
 ServerRoot a
+
+
+SSLCACertificateFile a
+
+
+MaxKeepAliveRequests 98.000000
+
+
+NameVirtualHost localhost:80.000000
+KeepAlive yes
+
+
+KeepAliveTimeout 5.000000
+
+
+HostnameLookups no
+
+
+TimeOut 300.000000
+
+
+ServerTokens OS
+
+
+PidFile /var/run/apache2.pid
+
+
+SSLCertificateKeyFile g
+
+
+TraceEnable Off
+
+
+SSLCACertificatePath b
+
+
+SSLCARevocationPath dd
 
 
