--- a/packages/sample_package/default.conf
+++ b/packages/sample_package/default.conf
@@ -1,20 +1,11 @@
 # Container container1
-string12: d@s.c
-number1: +000000014
-bool1: Enable
-# End of container1
-
-
-# Container container0
-# Container container1
+# Plugin key_word 
 pbool1: Enable
 # End of container1
 
 
-pnumber2: 0.100000
-# End of container0
-
-
+# Plugin key_word 
+pbool1: Enable
 # Container container2
 container3: <text>[555.000000]
 container3: <pokus>[20.000000]
@@ -23,4 +14,6 @@ number2: 0.000580
 # End of container2
 
 
+# Plugin key_word 
+pnumber2: 0.100000
 string1: aaaaa, bbbbbb
