--- a/packages/sample_package/default.conf
+++ b/packages/sample_package/default.conf
@@ -1,17 +1,20 @@
-# Container container2
-string2: value1
-number2: 0.000580
-container3: <text>[555.000000]
-container3: <pokus>[20.000000]
-# End of container2
+# Container container1
+# Plugin key_word 
+pbool1: Disable
+bool1: Enable
+number1: +000000042
+string12: name@email.com
+# End of container1
 
 
 string1: aaaaa, bbbbbb
 # Plugin key_word 
 pnumber2: 0.100220
-# Container container1
-# Plugin key_word 
-pbool1: Enable
-# End of container1
+# Container container2
+number2: 0.000580
+container3: <text>[555.000000]
+container3: <pokus>[20.000000]
+string2: value2
+# End of container2
 
 
