--- a/logging.conf
+++ b/logging.conf
@@ -1,3 +1,4 @@
+
 [loggers]
 keys=root, Model, Presenter, View, IO
 
@@ -10,35 +11,37 @@ keys=simpleFormatter
 [logger_root]
 level=ERROR
 handlers=consoleHandler
-qualname=Freeconf
-
-
+        
 [logger_Model]
 level=DEBUG
 handlers=consoleHandler
 qualname=Model
 propagate=0
-
-
-[logger_Presenter]
-level=DEBUG
-handlers=consoleHandler
-qualname=Presenter
-propagate=0
-
+            
 [logger_View]
 level=DEBUG
 handlers=consoleHandler
 qualname=View
 propagate=0
-
-
+            
 [logger_IO]
 level=DEBUG
 handlers=consoleHandler
 qualname=IO
 propagate=0
-
+            
+[logger_Presenter]
+level=DEBUG
+handlers=consoleHandler
+qualname=Presenter
+propagate=0
+            
+[logger_Freeconf]
+level=DEBUG
+handlers=consoleHandler
+qualname=Freeconf
+propagate=0
+            
 [handler_consoleHandler]
 class=StreamHandler
 level=DEBUG
@@ -47,4 +50,4 @@ args=(sys.stdout,)
 
 [formatter_simpleFormatter]
 format=%(asctime)s %(levelname)s: %(name)s log from %(funcName)s in module %(module)s: %(message)s
-
+        
