--- a/packages/sample_package/default.conf
+++ b/packages/sample_package/default.conf
@@ -1,20 +1,20 @@
 # Container container1
 # Plugin key_word 
-pbool1: Disable
-bool1: Enable
+pbool1: Enable
 number1: +000000042
+bool1: Disable
 string12: name@email.com
 # End of container1
 
 
-string1: aaaaa, bbbbbb
-# Plugin key_word 
-pnumber2: 0.100220
 # Container container2
-number2: 0.000580
+string2: value1
 container3: <text>[555.000000]
-container3: <pokus>[20.000000]
-string2: value2
+container3: <pokus>[103.000000]
+number2: 0.164580
 # End of container2
 
 
+string1: bbbbbb, aaaaa
+# Plugin key_word 
+pnumber2: 0.101040
